--- a/agua.html
+++ b/agua.html
@@ -37,9 +37,11 @@
 
   <div class="container py-5">
     <h2>Exploración</h2>
-    <p>Elaboramos cartografía geológica, caracterización litológica, análisis geoquímicos de aguas, muestreo y modelación de cuencas para evaluar la disponibilidad y calidad de recursos hídricos.</p>
+    <p>Desarrollamos modelos hidrogeológicos conceptuales y numéricos, cálculos de balance hídrico, pruebas de bombeo y estimaciones de reservas hídricas subterráneas.</p>
     <h2>Geofísica</h2>
-    <p>Aplicamos métodos geoeléctricos, magnetométricos, gravimétricos y sísmicos para identificar acuíferos, estructuras subterráneas y características hidrogeológicas.</p>
+    <p>Implementamos métodos de geoeléctrica y tomografías para identificar características hidrogeológicas esenciales para la gestión ambiental.</p>
+    <h2>Inventario de puntos de agua<h2>
+    <p>Realizamos censos y evaluaciones de fuentes hídricas para planes de manejo y conservación</p>
     <h2>GIS aplicado a hidrogeología</h2>
     <p>Procesamos y analizamos datos geoespaciales para apoyar la gestión, monitoreo y conservación de recursos hídricos.</p>
     <h2>Análisis geomecánico de reservorios</h2>
