--- a/geotermia.html
+++ b/geotermia.html
@@ -33,7 +33,7 @@
 <body>
   <div class="banner">
     <h1>Geotermia, H2 y energías limpias</h1>
-    <h2>Aprovechamos el calor de la Tierra mediante estudios avanzados para impulsar proyectos de energía geotérmica de forma eficiente y sostenible.</h2>    
+    <p>Aprovechamos el calor de la Tierra mediante estudios avanzados para impulsar proyectos de energía geotérmica de forma eficiente y sostenible.</p>
   </div>
 
   <div class="container py-5">
