--- a/geotermia.html
+++ b/geotermia.html
@@ -45,7 +45,7 @@
     <p>Aplicamos técnicas de geoeléctrica, magnetometría y gravimetría para determinar la estructura y características físicas del subsuelo en proyectos geotérmicos.</p>
     <h2>GIS aplicado a minería</h2>
     <p>Integración de datos espaciales y geológicos para el análisis, modelamiento y toma de decisiones en proyectos de energía geotérmica.</p>
-    <h2>Perforaciones someras<h2>
+    <h2>Perforaciones someras</h2>
     <p>Ejecutamos perforaciones poco profundas para validar zonas de interés geotérmico y para la instalación de equipos de monitoreo térmico.</p>
     
     <h3>Proyectos Relacionados</h3>
