--- a/geotecnia.html
+++ b/geotecnia.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nombre del Servicio</title>
+  <title>Geotecnia</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Eras+Bold+ITC&display=swap" rel="stylesheet">
   <style>
@@ -32,12 +32,27 @@
 </head>
 <body>
   <div class="banner">
-    <h1>Nombre del Servicio</h1>
+    <h1>Geotecnia</h1>
+    <p>Proveemos soluciones geotécnicas seguras y efectivas para la construcción, el análisis de riesgos y el diseño de obras civiles.</p>
   </div>
 
   <div class="container py-5">
-    <h2>Descripción del Servicio</h2>
-    <p>Aquí puedes escribir la información detallada sobre el servicio, la historia, los proyectos realizados, tecnologías utilizadas, beneficios, etc.</p>
+    <h2>Estudio de Suelos</h2>
+    <p>Realizamos cartografía geológica, geotécnica y geomorfológica detallada, así como descripción de núcleos de perforación para soportar el diseño de proyectos de infraestructura.</p>
+    <h2>Geología para ingeniería</h2>
+    <p>Realizamos cartografía geológica, geotécnica y geomorfológica detallada, así como descripción de núcleos de perforación para soportar el diseño de proyectos de infraestructura.</p>
+    <h2>Modelos hidrogeológicos aplicados</h2>
+    <p>Modelamos flujos de agua subterránea en obras civiles para prevenir afectaciones geotécnicas.</p>
+    <h2>Análisis de estabilidad de taludes</h2>
+    <p>AEvaluamos y diseñamos soluciones para taludes naturales y artificiales en suelo y roca.</p>
+    <h2>Caracterización geomecánica de macizos rocosos</h2>
+    <p>Determinamos propiedades y comportamiento de macizos rocosos, esenciales para túneles, presas y obras subterráneas.</p>
+    <h2>Estudios de amenazas naturales</h2>
+    <p>Analizamos amenazas como deslizamientos, inundaciones y sismos para la gestión de riesgos.</p>
+    <h2>Túneles</h2>
+    <p>Realizamos mapeo subterráneo, caracterización geológica en frentes de excavación y asesoría durante la construcción de túneles.</p>
+    <h2>Perforaciones geotécnicas</h2>
+    <p>Ejecutamos perforaciones para caracterización de suelos y rocas que apoyan diseños de cimentaciones y obras civiles.</p>    
 
     <h3>Proyectos Relacionados</h3>
     <ul>
