--- a/agua.html
+++ b/agua.html
@@ -41,7 +41,7 @@
     <h2>Geofísica</h2>
     <p>Implementamos métodos de geoeléctrica y tomografías para identificar características hidrogeológicas esenciales para la gestión ambiental.</p>
     <h2>Inventario de puntos de agua<h2>
-    <p>Realizamos censos y evaluaciones de fuentes hídricas para planes de manejo y conservación</p>
+    <p>Realizamos censos y evaluaciones de fuentes hídricas para planes de manejo y conservación.</p>
     <h2>GIS aplicado a hidrogeología</h2>
     <p>Procesamos y analizamos datos geoespaciales para apoyar la gestión, monitoreo y conservación de recursos hídricos.</p>
     <h2>Análisis geomecánico de reservorios</h2>
