--- a/ambiente.html
+++ b/ambiente.html
@@ -33,20 +33,20 @@
 <body>
   <div class="banner">
     <h1>Medio Ambiente y Geo-Ecosistema</h1>
-    <h2>Brindamos soluciones integrales para la gestión ambiental, conservación de recursos naturales y evaluación de ecosistemas</h2>
+    <h2>Brindamos soluciones integrales para la gestión ambiental, conservación de recursos naturales y evaluación de ecosistemas.</h2>
       </div>
 
   <div class="container py-5">
     <h2>Estudios y planes ambientales (EIA, PMA, PGA)</h2>
     <p>Elaboramos estudios de impacto ambiental, planes de manejo y gestión ambiental adaptados a las necesidades de cada proyecto.</p>
-    <h2>Ordenamiento territorial y cuencas hidrográficas:</h2>
+    <h2>Ordenamiento territorial y cuencas hidrográficas</h2>
     <p>Asesoramos en planes de ordenamiento territorial (POT) y planes de ordenamiento de cuencas (POMCAS) para garantizar un uso racional del territorio y los recursos naturales.</p>
     <h2>Análisis y clasificación de aguas</h2>
     <p>Realizamos estudios físico-químicos para determinar la calidad y clasificación de fuentes hídricas.</p>
     <h2>GIS aplicado al medio ambiente</h2>
     <p>Utilizamos sistemas de información geográfica para modelar variables ambientales, zonas de riesgo y estrategias de conservación.</p>
     <h2>Perforaciones para agua subterránea<h2>
-    <p>Ejecutamos perforaciones para captación de aguas subterráneas de forma técnica y sostenible</p>
+    <p>Ejecutamos perforaciones para captación de aguas subterráneas de forma técnica y sostenible.</p>
     
 
     <h3>Proyectos Relacionados</h3>
