--- a/index.html
+++ b/index.html
@@ -142,7 +142,12 @@
       <div class="container">
           <h2>Bienvenido a GCA Geociencias Aplicadas SAS</h2>
           <p>Soluciones personalizadas en geología, SIG, medioambiente y análisis técnico especializado.</p>
-          <p></p>
+          <p>GCA Geociencias Aplicadas SAS, con más de 10 años de experiencia en nuestras materias, es una consultoría que ofrece servicios de Medio Ambiente, Geotecnia y GIS.
+              Te asesoramos ante un estudio de impacto ambiental o la realización de la documentación ambiental que necesites (Autorización Ambiental Unificada, Calificación Ambiental, Evaluación Ambiental Estratégica, Restauración Paisajística, Planes de Vigilancia, etc…). Especialistas en asesoramiento legal en medio ambiente y cuestiones urbanísticas.
+              Nuestro equipo de Geólogos, son especialistas en el ámbito de la ingeniería del terreno: estudios geotécnicos, informes periciales, patología de cimentaciones e inestabilidad de laderas, proyectos de refuerzo y contención de tierras, estudios de riesgos sísmicos y geológicos así como ensayos especiales en geotecnia. Contamos con equipos de nuestra propiedad, garantizando un estudio geotécnico de calidad, eficaz y económico. Acreditados por la Junta de Andalucía y siempre bajo visado colegial.
+              Geobiental a través de técnicas avanzadas de modelado 3D, ofrece infografías detalladas con un acabado hiperrealista para transmitir una idea fiel del acabado final de un proyecto o vivienda: Renders, Integraciones, Diseño de interiores, Recorridos virtuales, Videos y Animaciones.
+              Te invitamos a descubrir nuestros servicios, quienes somos y últimos trabajos con este paseo a través de nuestra Web
+          </p>
       </div>
   </section>
  
