--- a/index.html
+++ b/index.html
@@ -141,80 +141,99 @@
       </div>
   </section>
  
-  <!-- Sección de Servicios -->
-  <section class="services">
-    <div class="container">
-      <h2 class="mb-5">Nuestros Servicios</h2>
-      <div class="row g-4">
-        <div class="col-md-4">
-          <a href="geotermia.html">
-            <div class="card p-4">
-              <img src="icon-geotermia.png" class="card-img-top" alt="Geotermia">
-              <div class="card-body">
-                <h5 class="card-title">Geotermia</h5>
-                <p class="card-text">Exploramos y evaluamos recursos geotérmicos para impulsar proyectos de energía limpia y sostenible.</p>
-              </div>
+<!-- Sección de Servicios -->
+<section class="services py-5">
+  <div class="container">
+    <h2 class="mb-5 text-center">Nuestros Servicios</h2>
+    <div class="row g-4">
+      <div class="col-md-4 d-flex align-items-stretch">
+        <a href="geotermia.html" class="w-100 text-decoration-none">
+          <div class="card h-100 text-center shadow-sm">
+            <div class="p-4">
+              <img src="icon-geotermia.png" class="card-img-top mx-auto" alt="Geotermia" style="width: 80px; height: 80px; object-fit: contain;">
             </div>
-          </a>
-        </div>
-        <div class="col-md-4">
-          <a href="agua.html">
-            <div class="card p-4">
-              <img src="icon-recursos_hidricos.png" class="card-img-top" alt="Recursos Hídricos">
-              <div class="card-body">
-                <h5 class="card-title">Recursos Hídricos</h5>
-                <p class="card-text">Evaluamos y gestionamos los recursos hídricos subterráneos y superficiales para el desarrollo sostenible de proyectos y el ecosistema.</p>
-              </div>
+            <div class="card-body">
+              <h5 class="card-title">Geotermia</h5>
+              <p class="card-text">Exploramos y evaluamos recursos geotérmicos para impulsar proyectos de energía limpia y sostenible.</p>
             </div>
-          </a>
-        </div>
-        <div class="col-md-4">
-          <a href="ambiente.html">
-            <div class="card p-4">
-              <img src="icon-ambiente.png" class="card-img-top" alt="Geo-Ecosistema">
-              <div class="card-body">
-                <h5 class="card-title">Medio Ambiente y Geo-Ecosistema</h5>
-                <p class="card-text">Gestionamos los recursos hídricos y ambientales desde el geo-ecosistema para garantizar el desarrollo sostenible y el cumplimiento normativo..</p>                
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-4">
-          <a href="geotecnia.html">
-            <div class="card p-4">
-              <img src="icon-geotecnia.png" class="card-img-top" alt="Geotecnia">
-              <div class="card-body">
-                <h5 class="card-title">Geotecnia</h5>
-                <p class="card-text">Evaluamos las condiciones del terreno para diseñar soluciones seguras y eficientes en proyectos de ingeniería, exploración, geotecnia y análisis estructural.</p>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-4">
-          <a href="sig.html">
-            <div class="card p-4">
-              <img src="icon-sig.png" class="card-img-top" alt="SIG">
-              <div class="card-body">
-                <h5 class="card-title">SIG</h5>
-                <p class="card-text">Diseño e implementación de sistemas de información geográfica.</p>                               
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-4">
-          <a href="geofisica.html">
-            <div class="card p-4">
-              <img src="icon-geofisica.png" class="card-img-top" alt="Geofísica">
-              <div class="card-body">
-                <h5 class="card-title">Geofísica</h5>
-                <p class="card-text">Aplicamos métodos geofísicos avanzados para revelar las estructuras ocultas del subsuelo.</p>                
-              </div>
-            </div>
-          </a>
-        </div>
+          </div>
+        </a>
       </div>
+
+      <div class="col-md-4 d-flex align-items-stretch">
+        <a href="agua.html" class="w-100 text-decoration-none">
+          <div class="card h-100 text-center shadow-sm">
+            <div class="p-4">
+              <img src="icon-recursos_hidricos.png" class="card-img-top mx-auto" alt="Recursos Hídricos" style="width: 80px; height: 80px; object-fit: contain;">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Recursos Hídricos</h5>
+              <p class="card-text">Evaluamos y gestionamos los recursos hídricos subterráneos y superficiales para el desarrollo sostenible de proyectos y el ecosistema.</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-md-4 d-flex align-items-stretch">
+        <a href="ambiente.html" class="w-100 text-decoration-none">
+          <div class="card h-100 text-center shadow-sm">
+            <div class="p-4">
+              <img src="icon-ambiente.png" class="card-img-top mx-auto" alt="Geo-Ecosistema" style="width: 80px; height: 80px; object-fit: contain;">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Medio Ambiente y Geo-Ecosistema</h5>
+              <p class="card-text">Gestionamos los recursos hídricos y ambientales desde el geo-ecosistema para garantizar el desarrollo sostenible y el cumplimiento normativo.</p>                
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-md-4 d-flex align-items-stretch">
+        <a href="geotecnia.html" class="w-100 text-decoration-none">
+          <div class="card h-100 text-center shadow-sm">
+            <div class="p-4">
+              <img src="icon-geotecnia.png" class="card-img-top mx-auto" alt="Geotecnia" style="width: 80px; height: 80px; object-fit: contain;">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Geotecnia</h5>
+              <p class="card-text">Evaluamos las condiciones del terreno para diseñar soluciones seguras y eficientes en proyectos de ingeniería, exploración, geotecnia y análisis estructural.</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-md-4 d-flex align-items-stretch">
+        <a href="sig.html" class="w-100 text-decoration-none">
+          <div class="card h-100 text-center shadow-sm">
+            <div class="p-4">
+              <img src="icon-sig.png" class="card-img-top mx-auto" alt="SIG" style="width: 80px; height: 80px; object-fit: contain;">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">SIG</h5>
+              <p class="card-text">Diseño e implementación de sistemas de información geográfica que optimizan la gestión territorial y ambiental.</p>                               
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-md-4 d-flex align-items-stretch">
+        <a href="geofisica.html" class="w-100 text-decoration-none">
+          <div class="card h-100 text-center shadow-sm">
+            <div class="p-4">
+              <img src="icon-geofisica.png" class="card-img-top mx-auto" alt="Geofísica" style="width: 80px; height: 80px; object-fit: contain;">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Geofísica</h5>
+              <p class="card-text">Aplicamos métodos geofísicos avanzados para revelar las estructuras ocultas del subsuelo y optimizar el desarrollo de proyectos.</p>                
+            </div>
+          </div>
+        </a>
+      </div>
+
     </div>
-  </section>
+  </div>
+</section>
+
 
   
   <!-- Nuestro Equipo -->
