--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       z-index: 1020;
     }
     .hero-section {
-      background: url('ruta-de-tu-banner.jpg') center/cover no-repeat;
+      background: url(banner.jpg') center/cover no-repeat;
       height: 90vh;
       display: flex;
       align-items: center;
