--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
       z-index: 1020;
     }
     .hero-section {
-      background: url(banner.jpg') center/cover no-repeat;
+      position: relative;
+      width: 100%;
       height: 90vh;
+      background-size: cover;
+      background-position: center;
       display: flex;
       align-items: center;
       justify-content: center;
-      color: white;
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.6);
     }
     .service-card {
       height: 100%;
@@ -90,8 +91,22 @@
       margin: 0 auto 20px auto; /* Centrado y espacio abajo */
       display: block;
     }
-</style>
+    
+    .division-imagen-parallax {
+      position: relative;
+      width: 100%;
+      height: 300px; /* puedes ajustar el alto si quieres */
+      overflow: hidden;
+    }
 
+    .parallax {
+      background-image: url('imagenes/division-imagen.jpg'); /* Asegúrate que sea la ruta correcta */
+      height: 100%;
+      background-attachment: fixed; /* Hace el efecto parallax */
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
   </style>
 </head>
 
@@ -284,6 +299,10 @@
   </div>
 </section>
 
+<!-- División con Imagen - efecto Parallax -->
+<section class="division-imagen-parallax">
+  <div class="parallax"></div>
+</section>
 
   
   <!-- Nuestro Equipo -->
