--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     }
     
     .service-icon {
-      width: 80px; /* Ajusta el ancho que prefieras */
-      height: 80px; /* Ajusta el alto que prefieras */
+      width: 300px; /* Ajusta el ancho que prefieras */
+      height: 300px; /* Ajusta el alto que prefieras */
       object-fit: contain; /* Para que no se deformen */
       margin: 0 auto 20px auto; /* Centrado y espacio abajo */
       display: block;
@@ -100,7 +100,7 @@
     }
 
     .parallax {
-      background-image: url('imagenes/division-imagen.jpg'); /* Asegúrate que sea la ruta correcta */
+      background-image: url('division-imagen.png'); /* Asegúrate que sea la ruta correcta */
       height: 100%;
       background-attachment: fixed; /* Hace el efecto parallax */
       background-position: center;
@@ -215,7 +215,7 @@
         <a href="geotermia.html" class="w-100 text-decoration-none">
           <div class="card h-100 text-center shadow-sm">
             <div class="p-4">
-              <img src="icon-geotermia.png" class="card-img-top mx-auto" alt="Geotermia" style="width: 250px; height: 250px; object-fit: contain;">
+              <img src="icon-gemotermia.png" class="service-icon" alt="Geotermia">
             </div>
             <div class="card-body">
               <h5 class="card-title">Geotermia</h5>
@@ -229,7 +229,7 @@
         <a href="agua.html" class="w-100 text-decoration-none">
           <div class="card h-100 text-center shadow-sm">
             <div class="p-4">
-              <img src="icon-recursos_hidricos.png" class="card-img-top mx-auto" alt="Recursos Hídricos" style="width: 80px; height: 80px; object-fit: contain;">
+              <img src="icon-recursos_hidricos.png" class="service-icon" alt="Recursos Hídricos">
             </div>
             <div class="card-body">
               <h5 class="card-title">Recursos Hídricos</h5>
@@ -243,7 +243,7 @@
         <a href="ambiente.html" class="w-100 text-decoration-none">
           <div class="card h-100 text-center shadow-sm">
             <div class="p-4">
-              <img src="icon-ambiente.png" class="card-img-top mx-auto" alt="Geo-Ecosistema" style="width: 80px; height: 80px; object-fit: contain;">
+              <img src="icon-ambiente.png" class="service-icon" alt="Geo-Ecosistema">
             </div>
             <div class="card-body">
               <h5 class="card-title">Medio Ambiente y Geo-Ecosistema</h5>
@@ -257,7 +257,7 @@
         <a href="geotecnia.html" class="w-100 text-decoration-none">
           <div class="card h-100 text-center shadow-sm">
             <div class="p-4">
-              <img src="icon-geotecnia.png" class="card-img-top mx-auto" alt="Geotecnia" style="width: 80px; height: 80px; object-fit: contain;">
+              <img src="icon-geotecnia.png" class="service-icon" alt="Geotecnia">
             </div>
             <div class="card-body">
               <h5 class="card-title">Geotecnia</h5>
@@ -271,7 +271,7 @@
         <a href="sig.html" class="w-100 text-decoration-none">
           <div class="card h-100 text-center shadow-sm">
             <div class="p-4">
-              <img src="icon-sig.png" class="card-img-top mx-auto" alt="SIG" style="width: 80px; height: 80px; object-fit: contain;">
+              <img src="icon-sig.png" class="service-icon" alt="SIG">
             </div>
             <div class="card-body">
               <h5 class="card-title">SIG</h5>
@@ -285,7 +285,7 @@
         <a href="geofisica.html" class="w-100 text-decoration-none">
           <div class="card h-100 text-center shadow-sm">
             <div class="p-4">
-              <img src="icon-geofisica.png" class="card-img-top mx-auto" alt="Geofísica" style="width: 80px; height: 80px; object-fit: contain;">
+              <img src="icon-geofisica.png" class="service-icon" alt="Geofísica">
             </div>
             <div class="card-body">
               <h5 class="card-title">Geofísica</h5>
