--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <a href="geotermia.html" class="w-100 text-decoration-none">
           <div class="card h-100 text-center shadow-sm">
             <div class="p-4">
-              <img src="icon-gemotermia.png" class="service-icon" alt="Geotermia">
+              <img src="icon-geotermia.png" class="service-icon" alt="Geotermia">
             </div>
             <div class="card-body">
               <h5 class="card-title">Geotermia</h5>
