--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <div class="carousel-inner" style="height: 600px; overflow: hidden; position: relative;">
     
     <div class="carousel-item active">
-      <img src="banner8.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Imagen 1">
+      <img src="banner1.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Imagen 1">
       <div class="carousel-caption d-none d-md-block">
         <h2>Tu Título 1</h2>
         <p>Tu descripción breve 1</p>
@@ -159,7 +159,7 @@
     </div>
 
     <div class="carousel-item">
-      <img src="banner1.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Imagen 2">
+      <img src="banner2.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Imagen 2">
       <div class="carousel-caption d-none d-md-block">
         <h2>Tu Título 2</h2>
         <p>Tu descripción breve 2</p>
@@ -167,7 +167,47 @@
     </div>
 
     <div class="carousel-item">
-      <img src="banner5.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Imagen 3">
+      <img src="banner3.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Imagen 3">
+      <div class="carousel-caption d-none d-md-block">
+        <h2>Tu Título 3</h2>
+        <p>Tu descripción breve 3</p>
+      </div>
+    </div>
+
+    <div class="carousel-item">
+      <img src="banner4.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Imagen 4">
+      <div class="carousel-caption d-none d-md-block">
+        <h2>Tu Título 3</h2>
+        <p>Tu descripción breve 3</p>
+      </div>
+    </div>
+
+    <div class="carousel-item">
+      <img src="banner5.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Imagen 5">
+      <div class="carousel-caption d-none d-md-block">
+        <h2>Tu Título 3</h2>
+        <p>Tu descripción breve 3</p>
+      </div>
+    </div>
+
+    <div class="carousel-item">
+      <img src="banner7.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Imagen 6">
+      <div class="carousel-caption d-none d-md-block">
+        <h2>Tu Título 3</h2>
+        <p>Tu descripción breve 3</p>
+      </div>
+    </div>
+
+    <div class="carousel-item">
+      <img src="banner8.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Imagen 7">
+      <div class="carousel-caption d-none d-md-block">
+        <h2>Tu Título 3</h2>
+        <p>Tu descripción breve 3</p>
+      </div>
+    </div>
+
+    <div class="carousel-item">
+      <img src="banner9.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Imagen 8">
       <div class="carousel-caption d-none d-md-block">
         <h2>Tu Título 3</h2>
         <p>Tu descripción breve 3</p>
