--- a/index.html
+++ b/index.html
@@ -330,6 +330,20 @@
         </a>
       </div>
 
+      <div class="col-md-4 d-flex align-items-stretch">
+        <a href="geotermia.html" class="w-100 text-decoration-none">
+          <div class="card h-100 text-center shadow-sm">
+            <div class="p-4">
+              <img src="icon-geotermia.png" class="service-icon" alt="AVR">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Amenaza, Vulnerabilidad y Riesgo</h5>
+              <p class="card-text">Identificamos, analizamos y gestionamos amenazas, vulnerabilidades y riesgos para garantizar el desarrollo seguro y sostenible de tus proyectos.</p>
+            </div>
+          </div>
+        </a>
+      </div>
+
     </div>
   </div>
 </section>
