--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </div>
 
     <div class="carousel-item">
-      <img src="banner3.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Imagen 3">
+      <img src="banner10.png" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Imagen 3">
       <div class="carousel-caption d-none d-md-block">
         <h2>Tu Título 3</h2>
         <p>Tu descripción breve 3</p>
