--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
   <!-- Top Bar -->
   <div class="top-bar text-center">
-    <span><i class="bi bi-envelope"></i> contacto@gca.com | <i class="bi bi-facebook"></i> /GCA | <i class="bi bi-instagram"></i> @GCA</span>
+    <span><i class="bi bi-envelope"></i> gcageociencias@gmail.com | <i class="bi bi-facebook"></i> /GCA | <i class="bi bi-instagram"></i> @GCA</span>
   </div>
 
   <!-- Navigation -->
@@ -386,7 +386,7 @@
   </footer>
 
   <!-- Botón WhatsApp -->
-  <a href="https://wa.me/tu_numero" class="whatsapp-button" target="_blank">
+  <a href="https://wa.me/573057287714" class="whatsapp-button" target="_blank">
     <i class="bi bi-whatsapp"></i>
   </a>
 
