--- a/index.html
+++ b/index.html
@@ -331,10 +331,10 @@
       </div>
 
       <div class="col-md-4 d-flex align-items-stretch">
-        <a href="geotermia.html" class="w-100 text-decoration-none">
+        <a href="avr.html" class="w-100 text-decoration-none">
           <div class="card h-100 text-center shadow-sm">
             <div class="p-4">
-              <img src="icon-geotermia.png" class="service-icon" alt="AVR">
+              <img src="icon-avr.png" class="service-icon" alt="AVR">
             </div>
             <div class="card-body">
               <h5 class="card-title">Amenaza, Vulnerabilidad y Riesgo</h5>
